[B][feat#0011] : Modify Code